--- a/routes/routes.ini
+++ b/routes/routes.ini
@@ -1,6 +1,6 @@
 [commands]
 / = app\Commands\DefaultCommand
-; Default=chess\app\commands\DefaultCommand
+/default = app\Commands\Http\DefaultTextHttpCommand
 ; InitNewGame=chess\app\commands\InitNewGameCommand
 ; Checkin=chess\app\commands\CheckinCommand
 ; Login=chess\app\commands\LoginCommand
