--- a/env.ini
+++ b/env.ini
@@ -2,7 +2,7 @@
 ; url=http://100.84.75.212/chess/index.html
 dbType=mysql
 host=localhost
-dbName=frontController
+dbName=keyburner50
 dbUser=root
 dbPass=
 ; websocket=websocket://100.84.75.212:8000
