--- a/routes/routes.ini
+++ b/routes/routes.ini
@@ -1,7 +1,4 @@
 [commands]
 ; / = app\Commands\DefaultCommand
-/ = app\Commands\Http\DefaultTextHttpCommand
-; InitNewGame=chess\app\commands\InitNewGameCommand
-; Checkin=chess\app\commands\CheckinCommand
-; Login=chess\app\commands\LoginCommand
-; AddUser=chess\app\commands\AddUserCommand
+/         = app\Commands\Http\DefaultTextHttpCommand
+/check_in = app\Commands\Http\UserHttpCommand
