Response and CommandResolver rebuilt

--- a/routes/routes.ini
+++ b/routes/routes.ini
@@ -1,4 +1,4 @@
 [commands]
-; / = app\Commands\DefaultCommand
-/         = app\Commands\Http\DefaultTextHttpCommand
-/check_in = app\Commands\Http\UserHttpCommand
+/           = app\Commands\Http\DefaultTextHttpCommand
+/check_in   = app\Commands\Http\UserHttpCommand
+/activation = app\Commands\Http\UserActivationHttpCommand
