User page in work

--- a/routes/routes.ini
+++ b/routes/routes.ini
@@ -1,4 +1,7 @@
 [commands]
 /           = app\Commands\Http\DefaultTextHttpCommand
+/index      = app\Commands\Http\DefaultTextHttpCommand
 /check_in   = app\Commands\Http\UserHttpCommand
 /activation = app\Commands\Http\UserActivationHttpCommand
+/log_in     = app\Commands\Http\LogInHttpCommand
+/user       = app\Commands\Http\UserHttpCommand
