Users texts CRUD in work

--- a/routes/routes.ini
+++ b/routes/routes.ini
@@ -1,7 +1,11 @@
 [commands]
-/           = app\Commands\Http\DefaultTextHttpCommand
-/index      = app\Commands\Http\DefaultTextHttpCommand
-/check_in   = app\Commands\Http\UserHttpCommand
-/activation = app\Commands\Http\UserActivationHttpCommand
-/log_in     = app\Commands\Http\LogInHttpCommand
-/user       = app\Commands\Http\UserHttpCommand
+/               = app\Commands\Http\DefaultTextHttpCommand
+/index          = app\Commands\Http\DefaultTextHttpCommand
+/default_text   = app\Commands\Http\DefaultTextHttpCommand
+/user_text      = app\Commands\Http\UserTextHttpCommand
+/add_user_text  = app\Commands\Http\UserTextHttpCommand
+/edit_user_text = app\Commands\Http\UserTextHttpCommand
+/check_in       = app\Commands\Http\UserHttpCommand
+/user           = app\Commands\Http\UserHttpCommand
+/activation     = app\Commands\Http\UserActivationHttpCommand
+/log_in         = app\Commands\Http\LogInHttpCommand
