Save and delete added

--- a/routes/routes.ini
+++ b/routes/routes.ini
@@ -5,6 +5,7 @@
 /user_text      = app\Commands\Http\UserTextHttpCommand
 /add_user_text  = app\Commands\Http\UserTextHttpCommand
 /edit_user_text = app\Commands\Http\UserTextHttpCommand
+/del_user_text  = app\Commands\Http\UserTextHttpCommand
 /check_in       = app\Commands\Http\UserHttpCommand
 /user           = app\Commands\Http\UserHttpCommand
 /activation     = app\Commands\Http\UserActivationHttpCommand
