--- a/routes/routes.ini
+++ b/routes/routes.ini
@@ -10,3 +10,4 @@
 /user           = app\Commands\Http\UserHttpCommand
 /activation     = app\Commands\Http\UserActivationHttpCommand
 /log_in         = app\Commands\Http\LogInHttpCommand
+/statistics     = app\Commands\Http\StatisticsHttpCommand
