--- a/routes/routes.ini
+++ b/routes/routes.ini
@@ -1,13 +1,15 @@
 [commands]
-/               = app\Commands\Http\DefaultTextHttpCommand
-/index          = app\Commands\Http\DefaultTextHttpCommand
-/default_text   = app\Commands\Http\DefaultTextHttpCommand
-/user_text      = app\Commands\Http\UserTextHttpCommand
-/add_user_text  = app\Commands\Http\UserTextHttpCommand
-/edit_user_text = app\Commands\Http\UserTextHttpCommand
-/del_user_text  = app\Commands\Http\UserTextHttpCommand
-/check_in       = app\Commands\Http\UserHttpCommand
-/user           = app\Commands\Http\UserHttpCommand
-/activation     = app\Commands\Http\UserActivationHttpCommand
-/log_in         = app\Commands\Http\LogInHttpCommand
-/statistics     = app\Commands\Http\StatisticsHttpCommand
+/                = app\Commands\Http\DefaultTextHttpCommand
+/index           = app\Commands\Http\DefaultTextHttpCommand
+/default_text    = app\Commands\Http\DefaultTextHttpCommand
+/user_text       = app\Commands\Http\UserTextHttpCommand
+/add_user_text   = app\Commands\Http\UserTextHttpCommand
+/edit_user_text  = app\Commands\Http\UserTextHttpCommand
+/del_user_text   = app\Commands\Http\UserTextHttpCommand
+/check_in        = app\Commands\Http\UserHttpCommand
+/user            = app\Commands\Http\UserHttpCommand
+/activation      = app\Commands\Http\UserActivationHttpCommand
+/log_in          = app\Commands\Http\LogInHttpCommand
+/statistics      = app\Commands\Http\StatisticsHttpCommand
+/edit_user_theme = app\Commands\Http\UserThemeHttpCommand
+/del_user_theme  = app\Commands\Http\UserThemeHttpCommand
