--- a/routes/routes.ini
+++ b/routes/routes.ini
@@ -13,3 +13,4 @@
 /statistics      = app\Commands\Http\StatisticsHttpCommand
 /edit_user_theme = app\Commands\Http\UserThemeHttpCommand
 /del_user_theme  = app\Commands\Http\UserThemeHttpCommand
+/search          = app\Commands\Http\SearchUserTextHttpCommand
