autoresize autoscroll textarea

--- a/routes/routes.ini
+++ b/routes/routes.ini
@@ -10,6 +10,7 @@
 /user            = app\Commands\Http\UserHttpCommand
 /activation      = app\Commands\Http\UserActivationHttpCommand
 /log_in          = app\Commands\Http\LogInHttpCommand
+/log_out         = app\Commands\Http\LogInHttpCommand
 /statistics      = app\Commands\Http\StatisticsHttpCommand
 /edit_user_theme = app\Commands\Http\UserThemeHttpCommand
 /del_user_theme  = app\Commands\Http\UserThemeHttpCommand
