--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "require": {
         "phpmailer/phpmailer": "^6.5"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "9.*"
     }
 }
