--- a/env.ini
+++ b/env.ini
@@ -7,5 +7,6 @@ dbPass=
 mailUser=
 mailPass=
 debug=true
-url=http://94.244.191.245/keyburner50/
+url=http://176.36.150.88/keyburner50/
+viewDir=resources\views\\
 ; websocket=websocket://100.84.75.212:8000
