промежуточный, начал внедрение обсервера и рефакторинг воркеров

--- a/env.ini
+++ b/env.ini
@@ -7,6 +7,7 @@ dbPass=
 mailUser=
 mailPass=
 debug=true
+;debug=true --- Любое значение, эквивалент true - отображать ошибки. Закомментировать для скрытия ошибок. 
 url=http://176.36.150.88/keyburner50/
 viewDir=resources\views\\
 ; websocket=websocket://100.84.75.212:8000
