--- a/routes/routes.ini
+++ b/routes/routes.ini
@@ -1,7 +1,7 @@
 [commands]
-/                = app\Commands\Http\DefaultTextHttpCommand
-/index           = app\Commands\Http\DefaultTextHttpCommand
-/default_text    = app\Commands\Http\DefaultTextHttpCommand
+/                = app\Commands\Http\DefaultText\IndexCommand
+/index           = app\Commands\Http\DefaultText\IndexCommand
+/default_text    = app\Commands\Http\DefaultText\ShowCommand
 /user_text       = app\Commands\Http\UserTextHttpCommand
 /add_user_text   = app\Commands\Http\UserTextHttpCommand
 /edit_user_text  = app\Commands\Http\UserTextHttpCommand
